--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,9 @@
 
 body {
   font-family: 'Montserrat', sans-serif;
-  background-color: white; }
+  background-color: white;
+  margin: 0;
+  padding: 0; }
 
 fieldset, img {
   border: 0; }
