--- a/css/styles.css
+++ b/css/styles.css
@@ -335,23 +335,21 @@ fieldset, img {
     color: black;
     top: 25vh; }
   #content3 .photo {
-    background: url("../images/servicios-1.jpg") no-repeat center center;
+    background: url("../images/servicios-1.jpg") no-repeat bottom center;
     position: relative;
     overflow: hidden;
     top: 21vh;
-    height: 50vh;
+    height: 55vh;
     background-size: cover; }
-
-#map {
-  position: relative;
-  width: 100%;
-  height: 49vh; }
 
 #content4 {
   position: relative;
   overflow: hidden;
   display: inline-block;
-  background-size: cover; }
+  background-size: cover;
+  width: 100%;
+  /* Create two equal columns that sits next to each other */
+  /* Responsive layout - makes a one column-layout instead of two columns */ }
   #content4 #titulo {
     position: absolute;
     top: 9vh;
@@ -363,12 +361,48 @@ fieldset, img {
     font-size: 2.2vh;
     color: black;
     top: 25vh; }
-  #content4 #map {
+  #content4 .arti2 {
+    padding-top: 5vh;
     position: relative;
-    overflow: hidden;
-    top: 21vh;
-    height: 50vh;
-    background-size: cover; }
+    color: black; }
+  #content4 .row {
+    display: -ms-flexbox;
+    /* IE10 */
+    display: -webkit-box;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    /* IE10 */
+    flex-wrap: wrap;
+    padding: 0 4px;
+    padding-top: 140px;
+    padding-bottom: 70px;
+    height: 800px; }
+  #content4 .column {
+    -ms-flex: 50%;
+    /* IE10 */
+    -webkit-box-flex: 50%;
+    flex: 50%;
+    max-width: 50%;
+    padding: 0 4px; }
+    #content4 .column #map, #content4 .column p {
+      margin-top: 8px;
+      margin-bottom: 8px;
+      vertical-align: middle;
+      width: 100%;
+      height: 100%; }
+    #content4 .column p {
+      padding-top: 0;
+      margin-top: 0; }
+  @media screen and (max-width: 800px) {
+    #content4 .column {
+      -ms-flex: 100%;
+      -webkit-box-flex: 100%;
+      flex: 100%;
+      max-width: 100%; }
+    #content4 #column1 {
+      height: 200px; }
+    #content4 #column2 {
+      height: 360px; } }
 
 footer {
   height: 10vh;
