--- a/css/Sass/styles.scss
+++ b/css/Sass/styles.scss
@@ -15,7 +15,7 @@
   }
   .arti {
     position: relative;
-    font-size: 2.2vh;
+    font-size: 20px;
     color: black;
     top: 25vh;
   }
@@ -32,6 +32,10 @@
 
 #logo {
   height: 28px;
+}
+
+#texto {
+  font-size: 100px;
 }
 
 body {
@@ -102,11 +106,11 @@ fieldset, img {
     animation-delay: 5s;
   }
 
-  // Medium devices (tablets, less than 992px)
   @media (max-width: 991.98px) {
     .title {
       width: 32vw;
       bottom: 22vh;
+
     }
     .subtitle {
       font-size: 2vw;
@@ -226,7 +230,7 @@ fieldset, img {
 
 #content22 {
   @include sections;
-  height: 90vh;
+  height: 100vh;
   .photo {
     background: url("../images/espejos.jpg") no-repeat center center;
       position: relative;
@@ -239,7 +243,7 @@ fieldset, img {
 
 #content23 {
   @include sections;
-  height: 90vh;
+  height: 100vh;
   .photo {
     background: url("../images/escaparate-2.jpg") no-repeat center center;
       position: relative;
@@ -252,7 +256,7 @@ fieldset, img {
 
 #content24 {
   @include sections;
-  height: 90vh;
+  height: 100vh;
   .photo {
     background: url("../images/tienda-2.jpg") no-repeat center center;
       position: relative;
@@ -265,7 +269,7 @@ fieldset, img {
 
 #content3 {
   @include sections;
-  height: 90vh;
+  height: 100vh;
   .photo {
     background: url("../images/servicios-1.jpg") no-repeat bottom center;
       position: relative;
@@ -315,6 +319,12 @@ fieldset, img {
   }
   /* Responsive layout - makes a one column-layout instead of two columns */
   @media screen and (max-width: 800px) {
+    padding-left: 8px;
+      .row {
+        padding-top: 100px;
+        height: 1100px;
+        font-size: 15px;
+      }
       .column {
           -ms-flex: 100%;
           flex: 100%;
@@ -337,44 +347,29 @@ footer {
 
 // Extra small devices (portrait phones, less than 576px)
 @media (max-width: 575.98px) {
-  #content1, #content21 {
-      height: 110vh;
-  }
-  #content21, #content22, #content23, #content24, #content3 {
-      height: 100vh;
+  #content1, #content21, #content22, #content23, #content24, #content3 {
+      height: 130vh;
   }
 }
 
 // Small devices (landscape phones, less than 768px)
 @media (max-width: 767.98px) {
-  #content1, #content21 {
-      height: 120vh;
-  }
-  #content22, #content23, #content24, #content3 {
-      height: 110vh;
+  #content1, #content21, #content22, #content23, #content24, #content3 {
+      height: 125vh;
+      .arti {
+        font-size: 17px;
+      }
   }
 }
 
 // Medium devices (tablets, less than 992px)
 @media (max-width: 991.98px) {
-  #content1, #content21 {
-      height: 130vh;
+  #content1, #content21, #content22, #content23, #content24, #content3 {
+      height: 115vh;
       .arti {
         padding-left: 1.35rem;
         padding-right: 1.35rem;
       }
-  }
-  #content21, #content22, #content23, #content24, #content3 {
-      height: 125vh;
-      .arti {
-        padding-left: 1.35rem;
-        padding-right: 1.35rem;
-      }
-  }
-
-
-  .arti {
-    font-size: 30px;
   }
   #logo {
     height: 23px;
@@ -391,4 +386,8 @@ footer {
   .mr-5 {
     margin-right: 0rem;
   }
+}
+
+p {
+
 }
