--- a/css/styles.css
+++ b/css/styles.css
@@ -420,20 +420,23 @@ footer {
 
 @media (max-width: 575.98px) {
   #content1, #content21, #content22, #content23, #content24, #content3 {
-    height: 130vh; } }
+    height: 130vh; }
+    #content1 .arti, #content21 .arti, #content22 .arti, #content23 .arti, #content24 .arti, #content3 .arti {
+      font-size: 12px; } }
 
 @media (max-width: 767.98px) {
   #content1, #content21, #content22, #content23, #content24, #content3 {
     height: 125vh; }
     #content1 .arti, #content21 .arti, #content22 .arti, #content23 .arti, #content24 .arti, #content3 .arti {
-      font-size: 17px; } }
+      font-size: 15px; } }
 
 @media (max-width: 991.98px) {
   #content1, #content21, #content22, #content23, #content24, #content3 {
     height: 115vh; }
     #content1 .arti, #content21 .arti, #content22 .arti, #content23 .arti, #content24 .arti, #content3 .arti {
       padding-left: 1.35rem;
-      padding-right: 1.35rem; }
+      padding-right: 1.35rem;
+      font-size: 17px; }
   #logo {
     height: 23px; }
   .pl-5 {
