--- a/css/Sass/styles.css
+++ b/css/Sass/styles.css
@@ -10,17 +10,33 @@
   /* Opera 12+ */
   animation: fadein 3s 1 forwards;
   /* IE 10+, Fx 29+ */
+  -webkit-animation-delay: 3s;
   animation-delay: 3s; }
 
 #logo {
-  height: 30px; }
+  height: 28px; }
+
+#texto {
+  font-size: 100px; }
 
 body {
   font-family: 'Montserrat', sans-serif;
-  background-color: white; }
+  background-color: white;
+  margin: 0;
+  padding: 0; }
 
 fieldset, img {
   border: 0; }
+
+.animateFadeIn {
+  -webkit-animation: fadein 5s 1;
+  /* Safari 4+ */
+  -moz-animation: fadein 5s 1;
+  /* Fx 5+ */
+  -o-animation: fadein 5s 1;
+  /* Opera 12+ */
+  animation: fadein 5s 1;
+  /* IE 10+, Fx 29+ */ }
 
 #content0 {
   position: relative;
@@ -31,36 +47,31 @@ fieldset, img {
     position: relative;
     overflow: hidden;
     height: 100vh;
-    background: url("../images/tienda-1-1.JPG") no-repeat center center fixed;
-    background-size: cover;
-    -webkit-animation: fadein 5s 1;
-    /* Safari 4+ */
-    -moz-animation: fadein 5s 1;
-    /* Fx 5+ */
-    -o-animation: fadein 5s 1;
-    /* Opera 12+ */
-    animation: fadein 5s 1;
-    /* IE 10+, Fx 29+ */ }
+    background: url("../images/tienda-1-1.jpg") no-repeat center top fixed;
+    background-size: cover; }
   #content0 .title {
-    width: 60vh;
+    width: 30vw;
     position: absolute;
     right: -80vh;
-    bottom: 20vh;
+    bottom: 14vh;
     -webkit-animation: fadeInUp 0.5s forwards;
     -webkit-animation-delay: 3s;
+    -webkit-animation: fadeInUp 2s forwards;
     animation: fadeInUp 2s forwards;
     animation-delay: 3s;
     opacity: 1; }
   #content0 .subtitle {
-    width: 40vh;
-    font-size: 3vh;
+    width: 20vw;
+    font-size: 1.5vw;
     position: absolute;
-    bottom: 14vh;
+    bottom: 10vh;
     right: -80vh;
     color: white;
     -webkit-animation: fadeInUp 0.5s forwards;
     -webkit-animation-delay: 3.3s;
+    -webkit-animation: fadeInUp 2s forwards;
     animation: fadeInUp 2s forwards;
+    -webkit-animation-delay: 3s;
     animation-delay: 3s; }
   #content0 #down {
     height: 60px;
@@ -76,177 +87,237 @@ fieldset, img {
     /* Opera 12+ */
     animation: fadein 3s 1 forwards;
     /* IE 10+, Fx 29+ */
+    -webkit-animation-delay: 5s;
     animation-delay: 5s; }
+  @media (max-width: 991.98px) {
+    #content0 .title {
+      width: 32vw;
+      bottom: 22vh; }
+    #content0 .subtitle {
+      font-size: 2vw;
+      width: 300px; } }
+  @media (max-width: 767.98px) {
+    #content0 .title {
+      width: 300px;
+      bottom: 22vh; }
+    #content0 .subtitle {
+      width: 300px;
+      font-size: 20px;
+      bottom: 16vh; } }
 
 #content1 {
   position: relative;
   overflow: hidden;
-  height: 100vh;
-  background-size: cover; }
-  #content1 .title {
+  display: inline-block;
+  background-size: cover;
+  height: 115vh; }
+  #content1 #titulo {
     position: absolute;
     top: 9vh;
-    left: 10vw;
     color: black;
-    font-size: 30px;
+    font-size: 7vh;
     font-weight: bold; }
   #content1 .arti {
     position: relative;
-    font-size: 2.5vh;
-    width: 95vw;
+    font-size: 18px;
     color: black;
     top: 25vh; }
-  @media (max-width: 991.98px) {
-    #content1 {
-      height: 110vh; } }
-  @media (max-width: 767.98px) {
-    #content1 {
-      height: 120vh; } }
-  @media (max-width: 575.98px) {
-    #content1 {
-      height: 130vh; } }
   #content1 .photo {
-    background: url("../images/nosotros-1.JPG") no-repeat center center fixed;
+    background: url("../images/principal-3.jpg") no-repeat center center;
     position: relative;
     overflow: hidden;
     top: 21vh;
     height: 50vh;
     background-size: cover; }
 
+#content11 {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+  background-size: cover;
+  /* Create four equal columns that sits next to each other */
+  /* Responsive layout - makes a two column-layout instead of four columns */
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */ }
+  #content11 #titulo {
+    position: absolute;
+    top: 9vh;
+    color: black;
+    font-size: 7vh;
+    font-weight: bold; }
+  #content11 .arti {
+    position: relative;
+    font-size: 18px;
+    color: black;
+    top: 25vh; }
+  #content11 .row {
+    display: -ms-flexbox;
+    /* IE10 */
+    display: -webkit-box;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    /* IE10 */
+    flex-wrap: wrap;
+    padding: 0 4px;
+    padding-top: 160px; }
+  #content11 .column {
+    -ms-flex: 25%;
+    /* IE10 */
+    -webkit-box-flex: 25%;
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px; }
+    #content11 .column img {
+      margin-top: 8px;
+      margin-bottom: 8px;
+      vertical-align: middle; }
+    #content11 .column .title {
+      text-align: center;
+      font-weight: bold;
+      font-size: 20px; }
+    #content11 .column .subtitle {
+      text-align: center; }
+  @media screen and (max-width: 800px) {
+    #content11 .column {
+      -ms-flex: 50%;
+      -webkit-box-flex: 50%;
+      flex: 50%;
+      max-width: 50%; } }
+  @media screen and (max-width: 600px) {
+    #content11 .column {
+      -ms-flex: 100%;
+      -webkit-box-flex: 100%;
+      flex: 100%;
+      max-width: 100%; } }
+
+#content12 {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+  background-size: cover; }
+  #content12 #titulo {
+    position: absolute;
+    top: 9vh;
+    color: black;
+    font-size: 7vh;
+    font-weight: bold; }
+  #content12 .arti {
+    position: relative;
+    font-size: 18px;
+    color: black;
+    top: 25vh; }
+  #content12 .instaimg img {
+    margin-bottom: 30px;
+    -webkit-transition: .3s;
+    -o-transition: .3s;
+    transition: .3s; }
+  #content12 .instaimg img:hover {
+    opacity: 0.8;
+    -moz-opacity: 0.8;
+    -webkit-opacity: 0.8;
+    -webkit-transition: .3s;
+    -o-transition: .3s;
+    transition: .3s; }
+  #content12 .container-fluid {
+    padding-top: 200px; }
+
 #content21 {
   position: relative;
   overflow: hidden;
-  height: 100vh;
-  background-size: cover; }
-  #content21 .title {
+  display: inline-block;
+  background-size: cover;
+  height: 115vh; }
+  #content21 #titulo {
     position: absolute;
     top: 9vh;
-    left: 10vw;
     color: black;
-    font-size: 30px;
+    font-size: 7vh;
     font-weight: bold; }
   #content21 .arti {
     position: relative;
-    font-size: 2.5vh;
-    width: 95vw;
+    font-size: 18px;
     color: black;
     top: 25vh; }
-  @media (max-width: 991.98px) {
-    #content21 {
-      height: 110vh; } }
-  @media (max-width: 767.98px) {
-    #content21 {
-      height: 120vh; } }
-  @media (max-width: 575.98px) {
-    #content21 {
-      height: 130vh; } }
   #content21 .photo {
-    background: url("../images/marcos-1.jpg") no-repeat center center fixed;
+    background: url("../images/marcos-1.jpg") no-repeat top center;
     position: relative;
     overflow: hidden;
     top: 21vh;
-    height: 50vh;
+    height: 400px;
     background-size: cover; }
 
 #content22 {
   position: relative;
   overflow: hidden;
-  height: 100vh;
-  background-size: cover; }
-  #content22 .title {
+  display: inline-block;
+  background-size: cover;
+  height: 115vh; }
+  #content22 #titulo {
     position: absolute;
     top: 9vh;
-    left: 10vw;
     color: black;
-    font-size: 30px;
+    font-size: 7vh;
     font-weight: bold; }
   #content22 .arti {
     position: relative;
-    font-size: 2.5vh;
-    width: 95vw;
+    font-size: 18px;
     color: black;
     top: 25vh; }
-  @media (max-width: 991.98px) {
-    #content22 {
-      height: 110vh; } }
-  @media (max-width: 767.98px) {
-    #content22 {
-      height: 120vh; } }
-  @media (max-width: 575.98px) {
-    #content22 {
-      height: 130vh; } }
   #content22 .photo {
-    background: url("../images/espejos.jpg") no-repeat center center fixed;
+    background: url("../images/espejos.jpg") no-repeat center center;
     position: relative;
     overflow: hidden;
     top: 21vh;
-    height: 50vh;
+    height: 400px;
     background-size: cover; }
 
 #content23 {
   position: relative;
   overflow: hidden;
-  height: 100vh;
-  background-size: cover; }
-  #content23 .title {
+  display: inline-block;
+  background-size: cover;
+  height: 115vh; }
+  #content23 #titulo {
     position: absolute;
     top: 9vh;
-    left: 10vw;
     color: black;
-    font-size: 30px;
+    font-size: 7vh;
     font-weight: bold; }
   #content23 .arti {
     position: relative;
-    font-size: 2.5vh;
-    width: 95vw;
+    font-size: 18px;
     color: black;
     top: 25vh; }
-  @media (max-width: 991.98px) {
-    #content23 {
-      height: 110vh; } }
-  @media (max-width: 767.98px) {
-    #content23 {
-      height: 120vh; } }
-  @media (max-width: 575.98px) {
-    #content23 {
-      height: 130vh; } }
   #content23 .photo {
-    background: url("../images/escaparate-2.jpg") no-repeat center center fixed;
+    background: url("../images/escaparate-2.jpg") no-repeat center center;
     position: relative;
     overflow: hidden;
     top: 21vh;
     height: 50vh;
     background-size: cover; }
+  #content23 #aluminio {
+    position: relative;
+    font-size: 400px;
+    margin: 0 auto; }
 
 #content24 {
   position: relative;
   overflow: hidden;
-  height: 100vh;
-  background-size: cover; }
-  #content24 .title {
+  display: inline-block;
+  background-size: cover;
+  height: 115vh; }
+  #content24 #titulo {
     position: absolute;
     top: 9vh;
-    left: 10vw;
     color: black;
-    font-size: 30px;
+    font-size: 7vh;
     font-weight: bold; }
   #content24 .arti {
     position: relative;
-    font-size: 2.5vh;
-    width: 95vw;
+    font-size: 18px;
     color: black;
     top: 25vh; }
-  @media (max-width: 991.98px) {
-    #content24 {
-      height: 110vh; } }
-  @media (max-width: 767.98px) {
-    #content24 {
-      height: 120vh; } }
-  @media (max-width: 575.98px) {
-    #content24 {
-      height: 130vh; } }
   #content24 .photo {
-    background: url("../images/tienda-2.jpg") no-repeat center center fixed;
+    background: url("../images/tienda-2.jpg") no-repeat center center;
     position: relative;
     overflow: hidden;
     top: 21vh;
@@ -256,76 +327,95 @@ fieldset, img {
 #content3 {
   position: relative;
   overflow: hidden;
-  height: 100vh;
-  background-size: cover; }
-  #content3 .title {
+  display: inline-block;
+  background-size: cover;
+  height: 115vh; }
+  #content3 #titulo {
     position: absolute;
     top: 9vh;
-    left: 10vw;
     color: black;
-    font-size: 30px;
+    font-size: 7vh;
     font-weight: bold; }
   #content3 .arti {
     position: relative;
-    font-size: 2.5vh;
-    width: 95vw;
+    font-size: 18px;
     color: black;
     top: 25vh; }
-  @media (max-width: 991.98px) {
-    #content3 {
-      height: 110vh; } }
-  @media (max-width: 767.98px) {
-    #content3 {
-      height: 120vh; } }
-  @media (max-width: 575.98px) {
-    #content3 {
-      height: 130vh; } }
   #content3 .photo {
-    background: url("../images/servicios-1.jpg") no-repeat center center fixed;
+    background: url("../images/servicios-1.jpg") no-repeat bottom center;
     position: relative;
     overflow: hidden;
     top: 21vh;
-    height: 50vh;
+    height: 55vh;
     background-size: cover; }
-
-#map {
-  position: relative;
-  width: 100%;
-  height: 49vh; }
 
 #content4 {
   position: relative;
   overflow: hidden;
-  height: 100vh;
-  background-size: cover; }
-  #content4 .title {
+  display: inline-block;
+  background-size: cover;
+  width: 100%;
+  /* Create two equal columns that sits next to each other */
+  /* Responsive layout - makes a one column-layout instead of two columns */ }
+  #content4 #titulo {
     position: absolute;
     top: 9vh;
-    left: 10vw;
     color: black;
-    font-size: 30px;
+    font-size: 7vh;
     font-weight: bold; }
   #content4 .arti {
     position: relative;
-    font-size: 2.5vh;
-    width: 95vw;
+    font-size: 18px;
     color: black;
     top: 25vh; }
-  @media (max-width: 991.98px) {
-    #content4 {
-      height: 110vh; } }
-  @media (max-width: 767.98px) {
-    #content4 {
-      height: 120vh; } }
-  @media (max-width: 575.98px) {
-    #content4 {
-      height: 130vh; } }
-  #content4 #map {
+  #content4 .arti2 {
+    padding-top: 5vh;
     position: relative;
-    overflow: hidden;
-    top: 21vh;
-    height: 50vh;
-    background-size: cover; }
+    color: black; }
+  #content4 .row {
+    display: -ms-flexbox;
+    /* IE10 */
+    display: -webkit-box;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    /* IE10 */
+    flex-wrap: wrap;
+    padding: 0 4px;
+    padding-top: 140px;
+    padding-bottom: 70px;
+    height: 800px; }
+  #content4 .column {
+    -ms-flex: 50%;
+    /* IE10 */
+    -webkit-box-flex: 50%;
+    flex: 50%;
+    max-width: 50%;
+    padding: 0 4px; }
+    #content4 .column #map, #content4 .column p {
+      margin-top: 8px;
+      margin-bottom: 8px;
+      vertical-align: middle;
+      width: 100%;
+      height: 100%; }
+    #content4 .column p {
+      padding-top: 0;
+      margin-top: 0; }
+  @media screen and (max-width: 800px) {
+    #content4 {
+      padding-left: 8px; }
+      #content4 .row {
+        padding-top: 100px;
+        height: 1100px;
+        font-size: 15px; }
+      #content4 .column {
+        -ms-flex: 100%;
+        -webkit-box-flex: 100%;
+        flex: 100%;
+        max-width: 100%; }
+      #content4 #column1 {
+        height: 200px; }
+      #content4 #column2 {
+        height: 360px; } }
 
 footer {
   height: 10vh;
@@ -333,22 +423,31 @@ footer {
   text-align: center; }
 
 @media (max-width: 991.98px) {
-  .arti {
-    font-size: 30px; }
-
+  #content1, #content21, #content22, #content23, #content24, #content3 {
+    height: 115vh; }
+    #content1 .arti, #content21 .arti, #content22 .arti, #content23 .arti, #content24 .arti, #content3 .arti {
+      padding-left: 1.35rem;
+      padding-right: 1.35rem;
+      font-size: 17px; }
   #logo {
-    height: 25px; }
-
+    height: 23px; }
   .pl-5 {
     padding-left: 0rem; }
-
   .ml-5 {
     margin-left: 0rem; }
-
   .pr-5 {
     padding-right: 0rem; }
-
   .mr-5 {
     margin-right: 0rem; } }
 
-/*# sourceMappingURL=styles.css.map */
+@media (max-width: 767.98px) {
+  #content1, #content21, #content22, #content23, #content24, #content3 {
+    height: 125vh; }
+    #content1 .arti, #content21 .arti, #content22 .arti, #content23 .arti, #content24 .arti, #content3 .arti {
+      font-size: 15px; } }
+
+@media (max-width: 575.98px) {
+  #content1, #content21, #content22, #content23, #content24, #content3 {
+    height: 150vh; }
+    #content1 .arti, #content21 .arti, #content22 .arti, #content23 .arti, #content24 .arti, #content3 .arti {
+      font-size: 15px; } }
