--- a/css/styles.css
+++ b/css/styles.css
@@ -494,4 +494,5 @@ footer {
       padding-right: 0.3em; }
   .pie .lumarc {
     padding-top: 20px;
-    padding-left: 2rem; } }
+    padding-left: 2rem;
+    font-size: 11px; } }
