Arreglado bug fotos 2

--- a/css/Sass/styles.scss
+++ b/css/Sass/styles.scss
@@ -272,7 +272,7 @@ fieldset, img {
   @include sections;
   height: 115vh;
   .photo {
-    background: url("../images/tienda-2-2.jpg") no-repeat center center;
+    background: url("../images/tienda-2.jpg") no-repeat center center;
     margin: 0 auto;
       position: relative;
       overflow: hidden;
