--- a/css/styles.css
+++ b/css/styles.css
@@ -329,7 +329,7 @@ fieldset, img {
     color: black;
     top: 25vh; }
   #content24 .photo {
-    background: url("../images/tienda-2-2.jpg") no-repeat center center;
+    background: url("../images/tienda-2.jpg") no-repeat center center;
     margin: 0 auto;
     position: relative;
     overflow: hidden;
