--- a/css/Sass/styles.scss
+++ b/css/Sass/styles.scss
@@ -149,10 +149,12 @@ fieldset, img {
 
 #content11 {
   @include sections;
+  #titulo {
+    top: 8vh;
+  }
   .row {
       display: -ms-flexbox; /* IE10 */
       display: flex;
-      margin: 0 auto;
       -ms-flex-wrap: wrap; /* IE10 */
       flex-wrap: wrap;
       padding: 0 4px;
