--- a/css/Sass/styles.scss
+++ b/css/Sass/styles.scss
@@ -382,7 +382,7 @@ footer {
 // Medium devices (tablets, less than 992px)
 @media (max-width: 991.98px) {
   #content1, #content21, #content22, #content23, #content24, #content3 {
-      height: 115vh;
+      height: 105vh;
       .arti {
         padding-left: 1.35rem;
         padding-right: 1.35rem;
@@ -442,6 +442,9 @@ footer {
 
 // Extra small devices (portrait phones, less than 576px)
 @media (max-width: 575.98px) {
+  #content1 {
+    height: 160vh;
+  }
   #content1, #content21, #content22, #content23, #content24, #content3 {
       height: 150vh;
       .arti {
