--- a/css/Sass/styles.scss
+++ b/css/Sass/styles.scss
@@ -445,7 +445,7 @@ footer {
   #content1 {
     height: 160vh;
   }
-  #content1, #content21, #content22, #content23, #content24, #content3 {
+  #content21, #content22, #content23, #content24, #content3 {
       height: 150vh;
       .arti {
         font-size: 15px;
