Espero que vaya

--- a/css/styles.css
+++ b/css/styles.css
@@ -501,10 +501,10 @@ footer {
 
 @media (max-width: 575.98px) {
   #content1 {
-    height: 160vh; }
-  #content1, #content21, #content22, #content23, #content24, #content3 {
+    height: 155vh; }
+  #content21, #content22, #content23, #content24, #content3 {
     height: 150vh; }
-    #content1 .arti, #content21 .arti, #content22 .arti, #content23 .arti, #content24 .arti, #content3 .arti {
+    #content21 .arti, #content22 .arti, #content23 .arti, #content24 .arti, #content3 .arti {
       font-size: 15px; }
   .redes {
     padding-top: 20px;
