--- a/css/Sass/styles.scss
+++ b/css/Sass/styles.scss
@@ -443,9 +443,9 @@ footer {
 // Extra small devices (portrait phones, less than 576px)
 @media (max-width: 575.98px) {
   #content1 {
-    height: 160vh;
+    height: 155vh;
   }
-  #content1, #content21, #content22, #content23, #content24, #content3 {
+  #content21, #content22, #content23, #content24, #content3 {
       height: 150vh;
       .arti {
         font-size: 15px;
