--- a/css/styles.css
+++ b/css/styles.css
@@ -502,9 +502,11 @@ footer {
 @media (max-width: 575.98px) {
   #content1 {
     height: 155vh; }
-  #content21, #content22, #content23, #content24, #content3 {
+  #content22 {
+    height: 125vh; }
+  #content21, #content23, #content24, #content3 {
     height: 150vh; }
-    #content21 .arti, #content22 .arti, #content23 .arti, #content24 .arti, #content3 .arti {
+    #content21 .arti, #content23 .arti, #content24 .arti, #content3 .arti {
       font-size: 15px; }
   .redes {
     padding-top: 20px;
