--- a/css/styles.css
+++ b/css/styles.css
@@ -503,10 +503,16 @@ footer {
   #content1 {
     height: 155vh; }
   #content22 {
-    height: 120vh; }
-  #content21, #content23, #content24, #content3 {
+    height: 115vh; }
+  #content23 {
+    height: 135vh; }
+  #content24 {
+    height: 130vh; }
+  #content3 {
+    height: 125vh; }
+  #content21 {
     height: 150vh; }
-    #content21 .arti, #content23 .arti, #content24 .arti, #content3 .arti {
+    #content21 .arti {
       font-size: 15px; }
   .redes {
     padding-top: 20px;
