--- a/css/Sass/styles.scss
+++ b/css/Sass/styles.scss
@@ -433,19 +433,37 @@ footer {
 // Small devices (landscape phones, less than 768px)
 @media (max-width: 767.98px) {
   #content1, #content21, #content22, #content23, #content24, #content3 {
-      height: 125vh;
-      .arti {
-        font-size: 15px;
-      }
+    .arti {
+      font-size: 15px;
+    }
   }
+  #content1 {
+    height: 160vh;
+  }
+  #content21 {
+    height: 185vh;
+  }
+  #content22 {
+    height: 115vh;
+  }
+  #content23 {
+    height: 135vh;
+  }
+  #content24 {
+    height: 130vh;
+  }
+  #content3 {
+    height: 130vh;
+  }
+
 }
 
 // Extra small devices (portrait phones, less than 576px)
 @media (max-width: 575.98px) {
   #content1, #content21, #content22, #content23, #content24, #content3 {
-    //.arti {
-      //font-size: 15px;
-    //}
+    .arti {
+      font-size: 15px;
+    }
   }
   #content1 {
     height: 155vh;
