--- a/css/styles.css
+++ b/css/styles.css
@@ -494,12 +494,24 @@ footer {
     color: white; }
 
 @media (max-width: 767.98px) {
-  #content1, #content21, #content22, #content23, #content24, #content3 {
-    height: 125vh; }
-    #content1 .arti, #content21 .arti, #content22 .arti, #content23 .arti, #content24 .arti, #content3 .arti {
-      font-size: 15px; } }
+  #content1 .arti, #content21 .arti, #content22 .arti, #content23 .arti, #content24 .arti, #content3 .arti {
+    font-size: 15px; }
+  #content1 {
+    height: 160vh; }
+  #content21 {
+    height: 185vh; }
+  #content22 {
+    height: 115vh; }
+  #content23 {
+    height: 135vh; }
+  #content24 {
+    height: 130vh; }
+  #content3 {
+    height: 130vh; } }
 
 @media (max-width: 575.98px) {
+  #content1 .arti, #content21 .arti, #content22 .arti, #content23 .arti, #content24 .arti, #content3 .arti {
+    font-size: 15px; }
   #content1 {
     height: 155vh; }
   #content22 {
